fx30/etc/iptables.rules
# See the FX30 User Guide r3 for details.

# Generated by iptables-save v1.4.21 on Thu Nov 10 19:02:24 2016
*filter
:INPUT ACCEPT [189:17812]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [148:22530]
-A INPUT -i rmnet0 -p icmp -m icmp --icmp-type 0 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet0 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet0 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i rmnet0 -j DROP
-A INPUT -i eth0 -p icmp -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j DROP
COMMIT
# Completed on Thu Nov 10 19:02:24 2016
